samples/_failures_safe/1761432123_9a4cbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82cc7081.c: In function ‘print_state’:
./samples/SAFE/__tmp_82cc7081.c:153:16: error: missing terminating " character
  153 |         printf("Current state:
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_82cc7081.c:153:9: error: expected expression at end of input
  153 |         printf("Current state:
      |         ^~~~~~
./samples/SAFE/__tmp_82cc7081.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82cc7081.c:153:9: error: expected declaration or statement at end of input
